# ai-code-reviewer

./: .cursorrules  .editorconfig  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  README.md  SECURITY.md  biome.json  commitlint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.claude/commands/: bump-prompt.md  check.md  new-adr.md  new-eval.md  new-tool.md  run-eval.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/indexer/: pyproject.toml
apps/indexer/src/evals/: README.md  bridge.py  cli.py  judge.py  pricing.py  runner.py  schema.py  summary.py
apps/indexer/src/evals/judges/: __init__.py
apps/indexer/src/evals/judges/versions/: main_judge_v1.py
apps/indexer/src/evals/scorers/: __init__.py  category.py  findings.py  location.py  severity.py  tokens.py  types.py
apps/indexer/src/indexer/: README.md  chunking.py  cli.py  contextual.py  embeddings.py  languages.py  models.py
apps/indexer/src/shared/: config.py
apps/indexer/tests/: test_bridge.py  test_chunking.py  test_cli.py  test_config.py  test_contextual.py  test_embeddings.py  test_evals_schema.py  test_judge.py  test_languages.py  test_pricing.py  test_render_eval_comment.py  test_runner.py  test_scorers.py  test_summary.py
apps/indexer/tests/fixtures/: constants_only.py  sample.py  sample.ts
apps/indexer/tests/fixtures/bridge/: mock-bridge.mjs
docs/: PHASE_4_HANDOFF.md  architecture.md  coding-style.md  evals.md  prompts.md  roadmap.md  session-log.md
scripts/: agent-bridge.mjs  cli.mjs  retrieval-bench.mjs
(+46 files in other folders)
