[project]
name = "acr-indexer"
version = "0.0.1"
description = "AI Code Reviewer — repo indexer + eval runner"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/indexer", "src/evals", "src/shared"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
# S101 (assert) is fine in tests
per-file-ignores = { "tests/**/*.py" = ["S101"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
